Sat Apr 18 16:26:52 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* Some inverse functions didn't compute right. Wonder who broke them.

Sun Feb  8 16:11:34 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* removed a compiler warning

Sat Nov 22 14:30:37 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* stats.cpp: fixed some bugs in the stats module
	  mean should now be correct
	  std  shoudl now be correct too.

Sat Sep 20 23:59:30 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kcalc.cpp: Added statistical functions

Mon Sep 15 00:34:58 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* added cut and pasted functionality
	* implemented EE 
	* implemented result stack
	* implemented precision and fixed precision 
	* added key bindings
	* tooltips
	* added configuration dialog
	

Sat Aug  2 22:06:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kcalc.h: clean up
	
