@@ -1,1 +1,1 @@
-#define KCALCVERSION "1.2.2"
+#define KCALCVERSION "1.2.5"
